syntax = "proto3";

option go_package = "./;protobufs";

package protobufs;

import "request.proto";

message DummyOrdererMsg {
    int32 sn = 1;
    Batch batch = 2;
}
